--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
-
+def ext = rootProject.ext
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.flyco.tablayoutsamples"
-        minSdkVersion 11
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        applicationId "com.aries.ui.view.tabsamples"
+        minSdkVersion ext.minSdkVersion
+        targetSdkVersion ext.targetSdkVersion
+        versionCode ext.versionCode
+        versionName ext.versionName
     }
     buildTypes {
         release {
@@ -20,13 +19,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.1.0'
-//    compile project(':FlycoTabLayout_Lib')
-
-    //--->support 3.0+
-    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-    //--->support 2.2+
-//    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.0@aar'
-//    compile 'com.nineoldandroids:library:2.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:'.concat(ext.supportVersion)
+//    implementation 'com.aries.ui.view.tab:FlycoTabLayout_Lib:2.1.2@aar'
+    implementation project(':lib')
 }
