--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.flyco.tablayoutsamples"
+    package="com.aries.ui.view.tabsamples"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
