--- a/build.gradle
+++ b/build.gradle
@@ -3,25 +3,36 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        mavenLocal()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
-//        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.2'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
-//        maven {
-//            url "http://dl.bintray.com/h07000223/maven"
-//        }
+        google()
+        mavenLocal()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext{
+    compileSdkVersion = 28
+    buildToolsVersion = "28.0.3"
+    minSdkVersion = 14
+    targetSdkVersion = 28
+    supportVersion = "28.0.0"
+    versionCode = 1
+    versionName = "1.0.0"
 }
