--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+*.iml
 .gradle
 /local.properties
-build
-.idea
-*.iml
+/.idea/workspace.xml
+/.idea/libraries
 .DS_Store
+/build
+/captures
+.externalNativeBuild
+/.idea
+/build
