--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ ext{
     buildToolsVersion = "28.0.3"
     minSdkVersion = 14
     targetSdkVersion = 28
-    supportVersion = "28.0.0"
-    versionCode = 2
-    versionName = "1.0.1"
+//    supportVersion = "28.0.0"
+    supportVersion = "1.0.0"
+    versionCode = 3
+    versionName = "1.0.2"
 }
