1、修改部分float只为int 并增加相关set方法 2、优化FragmentManager commit方法用于解决刷新前Activity Tab Fragment未同步切换问题 3、优化监听逻辑

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:'.concat(ext.supportVersion)
     implementation project(':lib')
+    //页面事件交互
+    implementation 'org.simple:androideventbus:1.0.5.1'
 }
