--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:'.concat(ext.supportVersion)
     implementation project(':lib')
+//    implementation 'com.github.AriesHoo:TabLayout:1.0.5'
     //页面事件交互
     implementation 'org.simple:androideventbus:1.0.5.1'
 }
